corrige erros no backend e ajusta o codigo ao padrão do sonarcloud